--- a/Playwright/DataConfigFirstdayOfWorkReminder.json
+++ b/Playwright/DataConfigFirstdayOfWorkReminder.json
@@ -50,9 +50,11 @@
                 "type": "KWL",
                 "operator": "EQUAL"
               }
-            ]
+            ],
+            "selectDocumentDialogs": []
           }
-        ]
+        ],
+        "testShouldFail": false
       }
     ]
   },
