--- a/Playwright/DataConfigMeeting.json
+++ b/Playwright/DataConfigMeeting.json
@@ -20,9 +20,9 @@
   "eloAclData": {
     "arcPaths": []
   },
-  "eloSolutionArchiveData": {
-    "selectorSolutionTile": "xpath\u003d//*[@title\u003d\"Solutions\"]",
-    "selectorSolutionsFolder": "Solutions"
+  "eloTile": {
+    "repositoryTile": "Solutions",
+    "taskTile": "Aufgaben"
   },
   "eloActionData": {
     "eloActions": [
@@ -1345,6 +1345,9 @@
         "testShouldFail": false
       }
     ]
+  },
+  "eloTaskData": {
+    "eloTasks": []
   },
   "eloDeleteData": {
     "arcPaths": [
