--- a/Playwright/DataConfigQSBSHR50.json
+++ b/Playwright/DataConfigQSBSHR50.json
@@ -22,9 +22,9 @@
       "ARCPATH:/Personalmanagement/Personalakten/H/Hansen, Hans"
     ]
   },
-  "eloSolutionArchiveData": {
-    "selectorSolutionTile": "xpath\u003d//*[@title\u003d\"Solutions\"]",
-    "selectorSolutionsFolder": "Solutions"
+  "eloTile": {
+    "repositoryTile": "Solutions",
+    "taskTile": "Aufgaben"
   },
   "eloActionData": {
     "eloActions": [
@@ -278,6 +278,9 @@
         "testShouldFail": false
       }
     ]
+  },
+  "eloTaskData": {
+    "eloTasks": []
   },
   "eloDeleteData": {
     "arcPaths": []
