--- a/Playwright/DataConfigQSBSHR58.json
+++ b/Playwright/DataConfigQSBSHR58.json
@@ -22,9 +22,9 @@
       "ARCPATH:/Personalmanagement/Personalakten/H/Hansen, Hans"
     ]
   },
-  "eloSolutionArchiveData": {
-    "selectorSolutionTile": "xpath\u003d//*[@title\u003d\"Solutions\"]",
-    "selectorSolutionsFolder": "Solutions"
+  "eloTile": {
+    "repositoryTile": "Solutions",
+    "taskTile": "Aufgaben"
   },
   "eloActionData": {
     "eloActions": [
@@ -99,8 +99,34 @@
           }
         ],
         "testShouldFail": false
+      },
+      {
+        "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans/Korrespondenz/Geschäftsnachricht",
+        "formulaType": "VIEWER",
+        "formulaSaveButton": "",
+        "formulaCancelButton": "",
+        "selectionDialogItem": "",
+        "eloActionDef": {
+          "selectorRibbon": "",
+          "selectorMenu": "",
+          "selectorButton": ""
+        },
+        "tabPages": [
+          {
+            "tabName": "",
+            "initTabPage": [],
+            "controls": [],
+            "tables": [],
+            "checkValueControls": [],
+            "selectDocumentDialogs": []
+          }
+        ],
+        "testShouldFail": false
       }
     ]
+  },
+  "eloTaskData": {
+    "eloTasks": []
   },
   "eloDeleteData": {
     "arcPaths": []
