--- a/Playwright/DataConfigQSBSHRDeleteData.json
+++ b/Playwright/DataConfigQSBSHRDeleteData.json
@@ -20,12 +20,15 @@
   "eloAclData": {
     "arcPaths": []
   },
-  "eloSolutionArchiveData": {
-    "selectorSolutionTile": "xpath\u003d//*[@title\u003d\"Solutions\"]",
-    "selectorSolutionsFolder": "Solutions"
+  "eloTile": {
+    "repositoryTile": "Solutions",
+    "taskTile": "Aufgaben"
   },
   "eloActionData": {
     "eloActions": []
+  },
+  "eloTaskData": {
+    "eloTasks": []
   },
   "eloDeleteData": {
     "arcPaths": [
